# anchor-idl-parser

./: .gitignore  mytest.json  package-lock.json  package.json  parsed-report-mytest.json  parsed-report.json  tsconfig.json
rust/parse-anchor-instruction/: Cargo.toml
rust/parse-anchor-instruction/src/: lib.rs  main.rs
scripts/: mytest.payload.json  parse-anchor-instruction.ts  payload.example.json
src/: fetchProgramInstructionsFromTx.ts  parseAnchorInstruction.test.ts  parseAnchorInstruction.ts  parseAnchorTransaction.ts  programInstructionsFromMessage.ts
typescript/: .gitignore  parsed-report.json  streak_vault.json
typescript/scripts/: parse-anchor-instruction.ts  payload.example.json
typescript/src/: index.ts  parseAnchorInstruction.ts
